src/objects/Donation_Upsell__c.object
<CustomObject>
    <fields>
        <fullName>Original_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One-time donation from which this upsell originated</description>
        <inlineHelpText>One-time donation from which this upsell originated</inlineHelpText>
        <label>Original Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Donation Upsells</relationshipLabel>
        <relationshipName>Donation_Upsells</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Order_Id__c</fullName>
        <description>Order ID of the one-time donation from which this upsell originated</description>
        <inlineHelpText>Order ID of the one-time donation from which this upsell originated</inlineHelpText>
        <label>Original Order Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Donation which originated from this upsell</description>
        <inlineHelpText>Donation which originated from this upsell</inlineHelpText>
        <label>Upsell Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Originating Upsell</relationshipLabel>
        <relationshipName>Donation_Upsells1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Upsell_Order_Id__c</fullName>
        <description>Order ID of the donation which originated from this upsell</description>
        <inlineHelpText>Order ID of the donation which originated from this upsell</inlineHelpText>
        <label>Upsell Order Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upsell_Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recurring donation series which originated from this upsell</description>
        <inlineHelpText>Recurring donation series which originated from this upsell</inlineHelpText>
        <label>Upsell Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donation Upsells</relationshipLabel>
        <relationshipName>Donation_Upsells</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Donation Upsell</label>
    <nameField>
        <label>Upsell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Donation Upsells</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>